fixed minor bug with input width on smaller screens

--- a/frontend/src/scss/components/EditableDropdown.scss
+++ b/frontend/src/scss/components/EditableDropdown.scss
@@ -17,7 +17,7 @@
     }
 
     input {
-        flex-grow: 1;
+        width: 100%;
 
         border: none;
         margin: 0px;
